# gitexplain

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
cli/: index.js
cli/services/: gitService.js  promptService.js  searchService.js
gx/: __init__.py  cli.py
gx/prompts/: api-docs.txt  blame.txt  changelog.txt  commit.txt  conflict.txt  coverage.txt  impact.txt  issue.txt  junior.txt  lines.txt  master.txt  mutation.txt  pr-description.txt  refactor.txt  review.txt  security.txt  split.txt  stash.txt  summary.txt  test-suggest.txt
gx/services/: ai.py  cache.py  clipboard.py  color.py  commit.py  config.py  env.py  git.py  hook.py  merge.py  output.py  pipeline.py  prompt.py  search.py  split.py  usage.py
packaging/aur/: PKGBUILD
packaging/homebrew-tap/Formula/: gitxplain.rb
prompts/: database.txt  docs.txt  pattern.txt  performance.txt  search.txt
prompts/test/: aiService.test.js  cacheService.test.js  commitService.test.js  configService.test.js  gitService.test.js  hookService.test.js  index.test.js  mergeService.test.js  outputFormatter.test.js  pipelineService.test.js  promptService.test.js  splitService.test.js  usageService.test.js
scripts/: build-deb.sh
test/: gitService.test.js
tests/: __init__.py  test_ai.py  test_cache.py  test_cli.py  test_commit.py  test_config.py  test_git.py  test_hook.py  test_merge.py  test_output.py  test_pipeline.py  test_prompt.py  test_split.py  test_usage.py
